Load Byte Buddy agent statically